aws-ec2-instance/security_group.tf
# Create the security group to allow SSH and HTTP/S
resource "aws_security_group" "t-ssh-http-s" {
  name = "t-ssh-http-s"
  description = "Allow SSH and HTTP/S"
  vpc_id = aws_vpc.test-terraform-vpc.id

  ingress {
      from_port = 22
      to_port = 22
      protocol = "tcp"
      cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
      from_port = 80
      to_port = 80
      protocol = "tcp"
      cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
      from_port = 443
      to_port = 443
      protocol = "tcp"
      cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
      from_port = 0
      to_port = 0
      protocol = "-1"
      cidr_blocks = ["0.0.0.0/0"]
  }
}
